# RustSploit

./: Cargo.toml  README.md
plugins/: CVE-2020-3452  CVE-2020-5902  CVE-2022-1388  brainpan  helloworld
src/: main.rs
