[package]
name = "RustSploit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glob = "0.3.0"
serde_json = "1.0.81"
snailquote = "0.3.1"
reqwest = "0.11"
tokio = { version = "1", features = ["full"] }
clearscreen = "1.0.9"
